# PR-Agent

./: .env.example  .gitignore  CI_SETUP.md  README.md  TODO.md  agents.md  bandit-report.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: STATE_MANAGEMENT.md
src/pr_verification_agent/: __init__.py  cli.py
src/pr_verification_agent/agents/: __init__.py
src/pr_verification_agent/core/: __init__.py  config.py  logging.py  repository.py  state_manager.py  vector_store.py
src/pr_verification_agent/integrations/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_config.py  test_repository.py  test_state_manager.py  test_vector_store.py
